test/corpus/basics.txt
-*- indent-tabs-mode: t; tab-width: 4 -*-
========================================
Minimal spec
========================================
----------------------------------------
 (source_file)

========================================
Comments and newlines
========================================
# Aaa

# Bbb
# Ccc 123

----------------------------------------
 (source_file)

========================================
Parameter list, possibly with newlines
========================================
Parameters:
	port

	user - The db user name
	password

----------------------------------------
(source_file
	(parameters
		(parameter
			name: (identifier))
		(parameter
			name: (identifier)
			description: (short_description))
		(parameter
			name: (identifier))))

========================================
Database connection
========================================
Set dbc = connection to "jdbc:mysql://localhost:${port}/"

----------------------------------------

(source_file
	(set
		name: (identifier)
		value: (connection
			url: (string
				(string_content)
				(interpolation
					(variable_instance
						(identifier)))
				(string_content)))))
